Fix usage to PHP 7.4 minimum.

--- a/Ressources/views/Login/login.html.twig
+++ b/Ressources/views/Login/login.html.twig
@@ -12,7 +12,7 @@
 {{ form_errors(form) }}
 {{ form_row(form.nickname, {label: 'Username', translation_domain: false}) }}
 {{ form_row(form.password, {label: 'Password', translation_domain: false}) }}
-{{ form_row(form.remember_me, {label: 'Remember me', required: false, translation_domain: false}) }}
+{{ form_row(form.remember, {label: 'Remember me', required: false, translation_domain: false}) }}
 {{ form_row(form.submit, {translation_domain: false}) }}
 {{ form_end(form) }}
 
